--- a/deploy/charts/cert-manager/values.yaml
+++ b/deploy/charts/cert-manager/values.yaml
@@ -4,6 +4,10 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 global:
+  # Image repository default for all images
+  # +docs:property
+  imageRepository: quay.io/jetstack
+
   # Reference to one or more secrets to be used when pulling images.
   # For more information, see [Pull an Image from a Private Registry](https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/).
   #
@@ -167,7 +171,11 @@ image:
 
   # The container image for the cert-manager controller.
   # +docs:property
-  repository: quay.io/jetstack/cert-manager-controller
+  repository: ""
+
+  # The container image name for the cert-manager controller.
+  # +docs:property
+  name: cert-manager-controller
 
   # Override the image tag to deploy by setting this variable.
   # If no value is set, the chart's appVersion is used.
@@ -900,9 +908,13 @@ webhook:
     # +docs:property
     # registry: quay.io
 
-    # The container image for the cert-manager webhook
+    # The container image for the cert-manager webhook.
     # +docs:property
-    repository: quay.io/jetstack/cert-manager-webhook
+    repository: ""
+
+    # The container image name for the cert-manager webhook.
+    # +docs:property
+    name: cert-manager-webhook
 
     # Override the image tag to deploy by setting this variable.
     # If no value is set, the chart's appVersion will be used.
@@ -1213,9 +1225,13 @@ cainjector:
     # +docs:property
     # registry: quay.io
 
-    # The container image for the cert-manager cainjector
+    # The container image for the cert-manager cainjector.
     # +docs:property
-    repository: quay.io/jetstack/cert-manager-cainjector
+    repository: ""
+
+    # The container image name for the cert-manager cainjector.
+    # +docs:property
+    name: cert-manager-cainjector
 
     # Override the image tag to deploy by setting this variable.
     # If no value is set, the chart's appVersion will be used.
@@ -1274,7 +1290,11 @@ acmesolver:
 
     # The container image for the cert-manager acmesolver.
     # +docs:property
-    repository: quay.io/jetstack/cert-manager-acmesolver
+    repository: ""
+
+    # The container image name for the cert-manager acmesolver.
+    # +docs:property
+    name: cert-manager-acmesolver
 
     # Override the image tag to deploy by setting this variable.
     # If no value is set, the chart's appVersion is used.
@@ -1407,7 +1427,11 @@ startupapicheck:
 
     # The container image for the cert-manager startupapicheck.
     # +docs:property
-    repository: quay.io/jetstack/cert-manager-startupapicheck
+    repository: ""
+
+    # The container image name for the cert-manager startupapicheck.
+    # +docs:property
+    name: cert-manager-startupapicheck
 
     # Override the image tag to deploy by setting this variable.
     # If no value is set, the chart's appVersion is used.
